Modification for Dialogs
Now they have icons, more readable text

--- a/Android app/app/src/main/res/layout/activity_new_crafting.xml
+++ b/Android app/app/src/main/res/layout/activity_new_crafting.xml
@@ -16,7 +16,7 @@ android:focusableInTouchMode="true">
         <android.support.design.widget.TabLayout
             android:id="@+id/new_crafting_tabs"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
         <android.support.v4.view.ViewPager
             android:id="@+id/viewpager"
             android:layout_width="match_parent"
@@ -40,21 +40,22 @@ android:focusableInTouchMode="true">
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:showDividers="end"
-            android:divider="@drawable/divider_drawable">
+            android:divider="@drawable/divider_drawable"
+            android:background="@color/black">
 
 
             <TextView
                 android:id="@+id/new_crafting_name"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
-                android:text="@string/new_crafting_name"></TextView>
+                android:text="@string/new_crafting_name"
+                android:textColor="@color/white"></TextView>
             <EditText
                 android:id="@+id/new_crafting_name_edit"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:autoText="false"
-                android:clickable="false"
-                ></EditText>
+                android:clickable="false"></EditText>
         </LinearLayout>
 
         <LinearLayout
@@ -62,13 +63,15 @@ android:focusableInTouchMode="true">
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:divider="@drawable/divider_drawable"
-            android:showDividers="end">
+            android:showDividers="end"
+            android:background="@color/black">
 
             <TextView
                 android:id="@+id/new_crafting_kind"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
-                android:text="@string/new_crafting_kind"></TextView>
+                android:text="@string/new_crafting_kind"
+                android:textColor="@color/white"></TextView>
             <TextView
                 android:id="@+id/new_crafting_kind_selected"
                 android:layout_height="wrap_content"
@@ -83,14 +86,15 @@ android:focusableInTouchMode="true">
             android:showDividers="end">
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="@color/black">
                 <TextView
                     android:id="@+id/new_crafting_cereals"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:text="@string/new_crafting_cereals"
                     android:layout_alignParentTop="true"
-                    ></TextView>
+                    android:textColor="@color/white"></TextView>
                 <ImageView
                     android:id="@+id/new_crafting_add_cereal"
                     android:layout_width="wrap_content"
@@ -120,7 +124,8 @@ android:focusableInTouchMode="true">
                     android:id="@+id/new_crafting_hops"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
-                    android:text="@string/new_crafting_hops"></TextView>
+                    android:text="@string/new_crafting_hops"
+                    android:textColor="@color/white"></TextView>
                 <ImageView
                     android:id="@+id/new_crafting_add_hop"
                     android:layout_width="wrap_content"
@@ -142,6 +147,7 @@ android:focusableInTouchMode="true">
         android:id="@+id/new_crafting_floating_start"
         android:src="@drawable/ic_send_white_18dp"
         android:layout_gravity="bottom|end"
+        android:layout_margin="20dp"
         />
 
 </FrameLayout>
