--- a/Android app/app/src/main/res/layout/dialog_add_hops.xml
+++ b/Android app/app/src/main/res/layout/dialog_add_hops.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_margin="10dp">
 
     <ListView
         android:id="@+id/dialog_add_hops_list"
@@ -14,20 +15,32 @@
         android:dividerHeight="1dp"-->
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/hop_ok_button"
-            android:layout_alignParentBottom="true"
-            android:text="@string/ok"/>
+        android:layout_height="match_parent"
+        android:paddingRight="40dp"
+        android:paddingLeft="40dp"
+        android:paddingBottom="5dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/hop_cancel_button"
             android:text="@string/cancel"
-            android:layout_toRightOf="@+id/hop_ok_button"
-            android:layout_alignParentBottom="true"/>
+            android:textColor="@color/darkYellow"
+            android:textSize="25dp"
+            android:textStyle="bold"
+            android:layout_alignParentBottom="true"
+            />
+        <TextView
+            android:layout_marginLeft="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/hop_ok_button"
+            android:layout_alignParentBottom="true"
+            android:text="@string/ok"
+            android:textColor="@color/darkYellow"
+            android:textSize="25dp"
+            android:textStyle="bold"
+            android:layout_toRightOf="@+id/hop_cancel_button"
+            />
     </RelativeLayout>
 
 </LinearLayout>
