--- a/Android app/app/src/main/res/layout/dialog_add_heat.xml
+++ b/Android app/app/src/main/res/layout/dialog_add_heat.xml
@@ -2,47 +2,68 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_margin="10dp">
+    android:orientation="vertical">
+
+    <TextView
+        android:paddingStart="10dp"
+        android:paddingTop="15dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/heat_tv_temperature"
+        android:text="@string/temperature"
+        android:textSize="20dp"
+        android:textColor="@color/black"
+        />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingLeft="10dp">
+
+        <EditText
+            android:id="@+id/heat_et_temperature"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
+            android:textColor="@color/black"
+            android:textSize="20dp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/degrees_symbol"
+            android:textColor="@color/black"
+            android:textSize="20dp" />
+    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/heat_tv_temperature"
-        android:text="@string/temperature"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/heat_et_temperature"
-            android:inputType="numberDecimal"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/degrees_symbol"/>
-        </LinearLayout>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/heat_tv_start"
-        android:text="@string/heat_tv_start"/>
+        android:text="@string/heat_tv_start"
+        android:textSize="20dp"
+        android:textColor="@color/black"
+        android:paddingTop="10dp"
+        android:paddingLeft="10dp"/>
     <LinearLayout
-        android:layout_width="match_parent"
+        android:paddingLeft="10dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/heat_et_start"
-            android:inputType="numberDecimal"/>
+            android:inputType="numberDecimal"
+            android:textSize="20dp"
+            android:textColor="@color/black"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/minutes_abreviature"/>
+            android:text="@string/minutes_abreviature"
+            android:textSize="20dp"
+            android:textColor="@color/black"/>
     </LinearLayout>
 
 
@@ -50,41 +71,31 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/heat_tv_duration"
-        android:text="@string/heat_tv_duration"/>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/heat_et_duration"
-            android:inputType="numberDecimal"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/minutes_abreviature"/>
-    </LinearLayout>
-
+        android:text="@string/heat_tv_duration"
+        android:textSize="20dp"
+        android:paddingTop="10dp"
+        android:textColor="@color/black"
+        android:paddingLeft="10dp"
+        />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_gravity="end|bottom">
+        android:paddingLeft="10dp">
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/heat_et_duration"
+            android:inputType="numberDecimal"
+            android:textSize="20dp"
+            android:textColor="@color/black"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/heat_ok_button"
-            android:text="@string/ok"
-            android:gravity="end"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/heat_cancel_button"
-            android:text="@string/cancel"
-            android:gravity="end"/>
+            android:text="@string/minutes_abreviature"
+            android:textSize="20dp"
+            android:textColor="@color/black"/>
     </LinearLayout>
-
 
 
 </LinearLayout>
