--- a/Android app/app/src/main/res/layout/dialog_add_cereals.xml
+++ b/Android app/app/src/main/res/layout/dialog_add_cereals.xml
@@ -3,42 +3,43 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_margin="10dp">
+    android:layout_margin="10dp"
+    android:weightSum="15">
 
     <ListView
         android:id="@+id/dialog_add_cereals_list"
         android:layout_width="match_parent"
-        android:layout_height="450dp"
+        android:layout_height="0dp"
         android:orientation="vertical"
-        android:layout_weight="0"/>
+        android:layout_weight="1"/>
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:paddingRight="40dp"
         android:paddingLeft="40dp"
-        android:paddingBottom="5dp">
+        android:paddingBottom="5dp"
+        android:layout_weight="14">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/cereal_cancel_button"
             android:text="@string/cancel"
             android:textColor="@color/darkYellow"
-            android:textSize="25dp"
+            android:textSize="15dp"
             android:textStyle="bold"
             android:layout_alignParentBottom="true"
-            />
+            android:layout_alignParentStart="true" />
         <TextView
             android:layout_marginLeft="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/cereal_ok_button"
-            android:layout_alignParentBottom="true"
             android:text="@string/ok"
             android:textColor="@color/darkYellow"
-            android:textSize="25dp"
+            android:textSize="15dp"
             android:textStyle="bold"
-            android:layout_toRightOf="@+id/cereal_cancel_button"
-            />
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true" />
     </RelativeLayout>
 
 </LinearLayout>
