--- a/Android app/app/src/main/res/layout/fragment_monitoring_fermenter.xml
+++ b/Android app/app/src/main/res/layout/fragment_monitoring_fermenter.xml
@@ -47,12 +47,14 @@
             android:id="@+id/fermenter_relative_ly_secondary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/fermenter_relative_ly_primary">
+            android:layout_below="@+id/fermenter_relative_ly_primary"
+            android:layout_marginLeft="10dp">
 
             <ImageView
                 android:id="@+id/density_icon"
-                android:layout_width="wrap_content"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content"
+                android:maxWidth="50dp"
                 android:layout_alignBottom="@+id/monitor_second_value"
                 android:src="@drawable/ic_densimeter" />
 
@@ -79,7 +81,7 @@
                 android:layout_width="@dimen/button_size"
                 android:layout_height="@dimen/button_size"
                 android:src="@drawable/ic_add_black_18dp"
-                android:layout_alignParentTop="true"
+                android:layout_alignBottom="@+id/monitor_second_measure"
                 android:layout_toEndOf="@+id/monitor_second_measure" />
 
             <EditText
