--- a/Android app/app/src/main/res/layout/list_row_cereal_added.xml
+++ b/Android app/app/src/main/res/layout/list_row_cereal_added.xml
@@ -5,18 +5,19 @@
     android:orientation="horizontal"
     android:padding="5dip" >
 
-    <!--  ListRow Left sied Thumbnail image -->
     <LinearLayout android:id="@+id/thumbnail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="3dip"
-        android:layout_alignParentLeft="true"
-        android:layout_marginRight="5dip">
+        android:layout_marginRight="5dip"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <ImageView
             android:id="@+id/list_image"
-            android:layout_width="50dip"
-            android:layout_height="50dip"/>
+            android:layout_width="30dip"
+            android:layout_height="30dip"
+            android:src="@drawable/white_malt"/>
     </LinearLayout>
 
     <LinearLayout
@@ -25,24 +26,29 @@
         android:orientation="horizontal"
         android:id="@+id/ly_hop_name"
         android:layout_toRightOf="@+id/thumbnail"
-        android:layout_centerInParent="true">
+        android:layout_centerInParent="true"
+        android:layout_marginLeft="10dp">
         <TextView
             android:id="@+id/row_cereal_added_txtName"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"/>
         <TextView
             android:id="@+id/row_cereal_added_amount"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"/>
         <TextView
             android:id="@+id/row_cereal_added_kg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
             android:text="@string/kilogram_abreviature"/>
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/row_cereal_added_cancel_btn"
+            android:layout_marginLeft="10dp"
             android:src="@drawable/ic_delete_black_18dp"/>
     </LinearLayout>
 
