--- a/Android app/app/src/main/res/layout/list_row_heat_added.xml
+++ b/Android app/app/src/main/res/layout/list_row_heat_added.xml
@@ -15,8 +15,10 @@
 
         <ImageView
             android:id="@+id/list_image"
-            android:layout_width="50dip"
-            android:layout_height="50dip"/>
+            android:layout_width="30dip"
+            android:layout_height="30dip"
+            android:src="@drawable/red_heat"
+            />
     </LinearLayout>
 
     <LinearLayout
@@ -33,26 +35,32 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
             android:text="@string/degrees_symbol"/>
         <TextView
             android:id="@+id/row_heat_added_start"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
             android:text="@string/minutes_abreviature"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:id="@+id/row_heat_added_duration"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
             android:text="@string/minutes_abreviature"/>
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:id="@+id/row_heat_added_remove_btn"
             android:src="@drawable/ic_delete_black_18dp"/>
     </LinearLayout>
