--- a/Android app/app/src/main/res/layout/list_row_hop_added.xml
+++ b/Android app/app/src/main/res/layout/list_row_hop_added.xml
@@ -15,8 +15,9 @@
 
         <ImageView
             android:id="@+id/list_image"
-            android:layout_width="50dip"
-            android:layout_height="50dip"/>
+            android:layout_width="30dip"
+            android:layout_height="30dip"
+            android:src="@drawable/white_hop"/>
     </LinearLayout>
 
     <LinearLayout
@@ -29,28 +30,34 @@
         <TextView
             android:id="@+id/row_hop_added_txtName"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"/>
         <TextView
             android:id="@+id/row_hop_added_amount"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"/>
         <TextView
             android:id="@+id/row_hop_added_grams"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
             android:text="@string/grams_abreviature"/>
         <TextView
             android:id="@+id/row_hop_added_time"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"/>
         <TextView
             android:id="@+id/row_hop_added_minutes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
             android:text="@string/minutes_abreviature"/>
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
             android:id="@+id/row_hop_added_cancel_btn"
             android:src="@drawable/ic_delete_black_18dp"/>
     </LinearLayout>
