--- a/Android app/app/src/main/res/layout/activity_main_menu.xml
+++ b/Android app/app/src/main/res/layout/activity_main_menu.xml
@@ -15,11 +15,17 @@
         android:layout_height="fill_parent"
         android:orientation="vertical">
 
-        <fragment android:name="nandroid.artesanus.fragments.RSBlurFragment"
-            android:id="@+id/list"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+        <FrameLayout
+            android:id="@+id/fragment_container"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent" />
+
+        <ListView
+            android:id="@+id/brews_lv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:stackFromBottom="true"></ListView>
+
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
