Http request improvement
Added snackbar when http response is bad instead of crash
Added internazionalizes string based on command from database

--- a/Android app/app/src/main/res/layout/list_row_log.xml
+++ b/Android app/app/src/main/res/layout/list_row_log.xml
@@ -20,6 +20,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/lv_row_log_info_text"
             android:paddingLeft="5dp"
+            android:textColor="@color/black"
             android:text="Esto es una prueba del texto que podria salir aqui y podria ser bastante largo por lo que necesitamos tener mucho cuidado"
             ></TextView>
 
